--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@ body, html {
   $dark-red: #ee4649;
   $light-red: #f46647;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
 
   // Background
   background: linear-gradient(to bottom right, $dark-red, $light-red);
