--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,92 @@
 /* You can add global styles to this file, and also import other style files */
-body, html {
-  $dark-red: #ee4649;
-  $light-red: #f46647;
-  min-height: 100vh;
+@import url('https://fonts.googleapis.com/css?family=Changa+One');
+@import url('https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i');
+@import '~font-awesome/css/font-awesome.css';
+
+html {
+  min-height: 100%;
   margin: 0;
   padding: 0;
 
   // Background
-  background: linear-gradient(to bottom right, $dark-red, $light-red);
+  background: white;
   background-repeat: repeat-x;
+}
+
+body {
+  margin: 0;
+  font-family: 'Arimo', "Helvetica Neue", Helvetica Neue, Helvetica, Verdana, sans-serif;
+}
+
+// Fuck the outline
+*:focus {
+  outline: 0;
+}
+
+.page {
+  padding: 0 32px 32px 32px;
+  max-width: 600px;
+  //margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5 {
+  margin-top: 32px;
+  margin-bottom: 8px;
+}
+
+p {
+  font-size: 14px;
+  margin: 0 0 8.5px;
+}
+
+h1 {
+  margin-bottom: 12px;
+  font-size: 20px;
+}
+
+h5 {
+  font-size: 16px;
+  margin-top: 24px;
+}
+
+blockquote {
+  font-size: 14px;
+  padding: 5px 17px;
+  border-left: 5px solid #179cde;
+  margin: 0 0 16px;
+  font-style: italic;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  li {
+    padding: 8px 4px;
+    i {
+      padding-right: 8px;
+    }
+    a {
+      text-decoration: none;
+    }
+  }
+}
+
+.italic {
+  font-style: italic;
+}
+
+.half-opacity {
+  opacity: 0.5;
+}
+
+// Stop bouncing
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  height: 100%;
+  overflow: auto;
 }
