--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<img src="../assets/img/logo.svg" />
+<app-side-menu></app-side-menu>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
+
+<div id="burger" [ngClass]="{'open' : sideMenuIsOpen}" (click)="toggleSideMenu()"><span></span></div>
+<!-- <app-footer></app-footer> -->
