--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -6,7 +6,7 @@
     <div class="android" (click)="openAndroid()">
       <img src="../../../assets/img/badge-google-play.svg" />
     </div>
-    <div class="ios">
+    <div class="ios" (click)="openiOS()">
       <img src="../../../assets/img/badge-app-store.svg" />
     </div>
   </div>
