--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,13 +1,3 @@
-<div class="welcome-page">
-  <h1>Hoopbot</h1>
-  <h2>Predict NBA Games</h2>
-  <p>bite-sized fantasy basketball</p>
-  <div class="download-icons">
-    <div class="android" (click)="openAndroid()">
-      <img src="../../../assets/img/badge-google-play.svg" />
-    </div>
-    <div class="ios" (click)="openiOS()">
-      <img src="../../../assets/img/badge-app-store.svg" />
-    </div>
-  </div>
+<div class="phone-container">
+  <img src="../../../assets/img/iphone-white-svg.png" />
 </div>
