--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<app-side-menu></app-side-menu>
+<app-header></app-header>
+<!-- <app-side-menu></app-side-menu> -->
 <div class="content">
   <router-outlet></router-outlet>
 </div>
 
+<app-footer></app-footer>
+
 <div id="burger" [ngClass]="{'open' : sideMenuIsOpen}" (click)="toggleSideMenu()"><span></span></div>
-<!-- <app-footer></app-footer> -->
