--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,12 @@
 .content {
-  width: calc(100% - 300px);
-  float: right;
-  min-height: 100vh;
-  //padding: 16px 32px;
+  color: white;
 }
 
 @media only screen and (max-width: 669px) {
   .content {
     width: 100%;
+    background: white;
+    color: #000;
   }
   #burger {
     z-index: 2;
