--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,36 +1,7 @@
-.welcome-page {
-  width: 100%;
+.phone-container {
   text-align: center;
-  padding: 32px 0;
-}
-
-h1 {
-  font-family: 'Changa One', "Helvetica Neue", Helvetica Neue, Arial, sans-serif;
-  font-size: 32px;
-}
-
-h2 {
-  margin-top: 0;
-  font-style: italic;
-}
-
-.download-icons {
-  max-width: 600px;
-  max-height: 200px;
-  display: flex;
-  margin: 0 auto;
-  div {
-    padding: 16px;
-    flex: auto;
-    width: 100%;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .android {
-    &:hover {
-      cursor: pointer;
-    }
+  img {
+    max-width: 100%;
+    max-height: 100%;
   }
 }
