--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,14 +1,20 @@
 <div class="footer">
   <div class="links-container">
+    <div class="link" [routerLink]="['/how-to-play']">
+      How to play
+    </div>
     <div class="link" [routerLink]="['/privacy-policy']">
       Privacy policy
     </div>
+    <div class="link" (click)="openLink('mailto:hoopbot@gmail.com', false)">
+      Contact
+    </div>
     <div class="separator"></div>
     <div class="link app" (click)="openLink('https://play.google.com/store/apps/details?id=neverland.hoopbot')">
-      Android
+      <img src="../../../assets/img/badge-google-play.svg" />
     </div>
     <div class="link app" (click)="openLink('https://itunes.apple.com/us/app/hoopbot/id1313728649')">
-      iOS
+      <img src="../../../assets/img/badge-app-store.svg" />
     </div>
   </div>
 </div>
