--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,3 +1,13 @@
-<div class="phone-container">
-  <img src="../../../assets/img/iphone-white-svg.png" />
+<div class="welcome-container">
+  <div class="blurb-container">
+    <h1>Predict NBA games Daily. It's free.</h1>
+    <ul>
+      <li>Tap on the team you think will win</li>
+      <li>Climb the leaderboard and win prizes</li>
+      <li>Play against friends</li>
+    </ul>
+  </div>
+  <div class="phone-container">
+    <img src="../../../assets/img/screenshot.png" />
+  </div>
 </div>
