--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,15 +1,15 @@
 .footer {
-  $footer-height: 60px;
+  $footer-height: 80px;
   position: fixed;
   height: $footer-height;
   line-height: $footer-height;
-  background: rgba(0, 0, 0, 0.1);
+  background: #dd1a41;
   color: white;
   bottom: 0;
   left: 0;
   width: 100%;
   .links-container {
-    max-width: 1200px;
+    padding-left: 16px;
     margin: 0 auto;
     display: flex;
     font-size: 14px;
@@ -22,6 +22,15 @@
     .link {
       padding: 0 16px;
       text-align: center;
+      height: $footer-height;
+      overflow: hidden;
+      img {
+        height: 50px;
+        padding: 15px 0;
+      }
+    }
+    .link.app {
+      padding: 0 8px;
     }
   }
 }
