--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,7 +8,7 @@
   left: 0;
   width: 100%;
   .links-container {
-    max-width: 1080px;
+    padding: 0 64px;
     margin: 0 auto;
     display: flex;
     font-size: 14px;
