--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,7 +1,37 @@
-.phone-container {
-  text-align: center;
-  img {
-    max-width: 100%;
-    max-height: 100%;
+.welcome-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
+  .blurb-container {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    padding: 32px;
+    width: 320px;
+    left: 60px;
+    h1 {
+      font-size: 28px;
+      margin: 0;
+      padding-bottom: 24px;
+      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+    }
+    ul {
+      padding-left: 6px;
+    }
+    li {
+      margin: 0;
+      padding: 0 0 8px 0;
+    }
+  }
+  .phone-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: right;
+    width: 100%;
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 }
