--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,5 @@
 .header {
-  $header-height: 120px;
-  height: $header-height;
+  height: 80px;
   line-height: 40px;
   padding-top: 40px;
   color: white;
@@ -12,18 +11,27 @@
     margin: 0 auto;
     display: flex;
     font-size: 14px;
-    &:hover {
-      cursor: pointer;
-    }
     .separator {
       flex: 1 1 auto;
     }
     .link {
       flex: 0 0 60px;
       font-size: 28px;
+      i {
+        transition: .25s;
+      }
+      &:hover {
+        cursor: pointer;
+        i {
+          transform: translate3d(0,-8px,0);
+        }
+      }
     }
     .hoopbot-logo {
       flex: 0 0 120px;
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 }
