--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="welcome-container">
+<div class="welcome-container" [ngClass]="{'mobile': isMobile}">
   <div class="blurb-container">
     <h1>Predict NBA games Daily. It's free.</h1>
     <ul>
