--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,6 +1,6 @@
 .welcome-container {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 40px auto 0 auto;
   position: relative;
   .blurb-container {
     position: absolute;
@@ -33,5 +33,14 @@
       max-width: 100%;
       max-height: 100%;
     }
+  }
+}
+
+.welcome-container.mobile {
+  margin-top: 0;
+  .blurb-container {
+    width: calc(100% - 64px);
+    position: relative;
+    left: 0;
   }
 }
