--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<!-- <app-side-menu></app-side-menu> -->
+<app-side-menu *ngIf="isMobile"></app-side-menu>
 <div class="content">
   <router-outlet></router-outlet>
 </div>
 
-<app-footer></app-footer>
+<app-footer *ngIf="!isMobile"></app-footer>
 
-<div id="burger" [ngClass]="{'open' : sideMenuIsOpen}" (click)="toggleSideMenu()"><span></span></div>
+<div *ngIf="isMobile" id="burger" [ngClass]="{'open' : sideMenuIsOpen}" (click)="toggleSideMenu()"><span></span></div>
