--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -2,7 +2,7 @@
   width: 300px;
   height: 100vh;
   display: flex;
-  background: #ee4649;
+  background: #f61c49;
   color: white;
   float: left;
   position: fixed;
