--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,11 @@ html {
   background: #f61b49;
 }
 
+body::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
 @media only screen and (max-width: 669px) {
   background: white;
 }
@@ -33,14 +38,27 @@ body {
 }
 
 .page {
-  padding: 0 32px 32px 32px;
-  max-width: 600px;
-  //margin: 0 auto;
+  padding: 32px;
+  max-width: 800px;
+  margin: 0 auto;
+  overflow-y: scroll;
+  position: absolute;
+  left: 50%;
+  margin-left: -400px;
+  height: 520px;
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
 }
 
 h1, h2, h3, h4, h5 {
   margin-top: 32px;
   margin-bottom: 8px;
+}
+
+h1:first-child {
+  margin-top: 0;
 }
 
 p {
