website finished ... for now

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer" id="footer" [ngClass]="{'mobile': isMobile}">
   <div class="links-container">
     <div class="link" [routerLink]="['/how-to-play']">
       How to play
@@ -6,7 +6,7 @@
     <div class="link" [routerLink]="['/privacy-policy']">
       Privacy policy
     </div>
-    <div class="link" (click)="openLink('mailto:hoopbot@gmail.com', false)">
+    <div class="link" (click)="openLink('mailto:hoopbot@gmail.com', false)" *ngIf="!isMobile">
       Contact
     </div>
     <div class="separator"></div>
@@ -15,6 +15,12 @@
     </div>
     <div class="link app" (click)="openLink('https://itunes.apple.com/us/app/hoopbot/id1313728649')">
       <img src="../../../assets/img/badge-app-store.svg" />
+    </div>
+    <div class="social" *ngIf="isMobile">
+      <i class="fa fa-envelope-o" (click)="openLink('mailto:hoopbot@gmail.com', false)"></i>
+    </div>
+    <div class="social" *ngIf="isMobile">
+      <i class="fa fa-instagram" (click)="openLink('https://www.instagram.com/hoopbot')"></i>
     </div>
   </div>
 </div>
