--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" [ngClass]="{'mobile': isMobile}">
   <div class="links-container">
     <div class="hoopbot-logo" [routerLink]="['/']">
       <img src="../../../assets/img/header-logo-01.svg" />
