--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -34,6 +34,15 @@
       max-height: 100%;
     }
   }
+
+  .download-image {
+    padding: 32px;
+    text-align: center;
+    img {
+      width: 220px;
+      max-width: 100%;
+    }
+  }
 }
 
 .welcome-container.mobile {
