--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,16 +4,13 @@ html {
   margin: 0;
   padding: 0;
 
-  background: #f61b49;
+  //background: #f61b49;
+  background: white;
 }
 
 body::-webkit-scrollbar {
   width: 0;
   height: 0;
-}
-
-@media only screen and (max-width: 669px) {
-  background: white;
 }
 
 * {
@@ -41,14 +38,15 @@ body {
   padding: 32px;
   max-width: 800px;
   margin: 0 auto;
-  overflow-y: scroll;
-  position: absolute;
-  left: 50%;
-  margin-left: -400px;
-  height: 520px;
-  &::-webkit-scrollbar {
-    width: 0;
-    height: 0;
+  color: #000;
+}
+
+@media only screen and (max-width: 669px) {
+  background: white;
+  .page {
+    position: relative;
+    max-width: calc(100% - 64px);
+    background: white;
   }
 }
 
